--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+All data Used and their corresponding codebooks can be found in 
 Is Charlotte's spending in Elementary Schools effective for its rate of growth?
 Authors:
 Caleb Watson
