--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-All data Used and their corresponding codebooks can be found in 
+All data Used and their corresponding codebooks can be found in the technical report. The full technical report can be found below: 
+
 Is Charlotte's spending in Elementary Schools effective for its rate of growth?
 Authors:
 Caleb Watson
@@ -61,6 +62,7 @@ Prinsloo, P., & Slade, S. (2018). Chapter 8. In Big Data and Learning Analytics 
 Vallor, S., Green , B., & Raicu, I. (2018). ETHICS IN TECH PRACTICE, 7–7. 
 Vallor, S., Green , B., & Raicu, I. (2018). ETHICS IN TECH PRACTICE, 8–8. 
 Wang, C. (2019, December 29). Impacts of school racial composition on the mathematics ... Impacts of School Racial Composition on the Mathematics and Reading Achievement Gap in Post Unitary Charlotte-Mecklenburg Schools. Retrieved December 14, 2021, from https://journals.sagepub.com/doi/abs/10.1177/0013124519894970 
+CPS DATA USED:https://www.census.gov/data/datasets/time-series/demo/cps/cps-basic.html
 
 
 
