--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-TURN LINE WRAP MODE ON SOFT WRAP WHEN VIEWING THE TECHNICALC REPORT. All data Used and their corresponding codebooks can be found in the technical report. The full technical report can be found below: 
+TURN LINE WRAP MODE ON SOFT WRAP WHEN VIEWING THE TECHNICALC REPORT. All visualization refrenced in this technical report can be found in cpsvisual. 
+All data Used and their corresponding codebooks can be found in the technical report. The full technical report can be found below: 
 
 Is Charlotte's spending in Elementary Schools effective for its rate of growth?
 Authors:
